style check corrections